--- a/product-app/index.html
+++ b/product-app/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Product App</title>
   </head>
   <body>
+    <div class="nav-bar"></div>
     <div id="app">
-      <h1>{{ product }}</h1>
-      <p>{{ description }}</p>
+      <div class="product">
+        <div class="product-image">
+          <a :href="imageLink" target="_blank">
+            <img :src="image" alt="" />
+          </a>
+        </div>
+        <div class="product-info">
+          <h1>{{ product }}</h1>
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="main.js"></script>
