--- a/product-app/index.html
+++ b/product-app/index.html
@@ -20,6 +20,16 @@
           <h1>{{ product }}</h1>
           <p v-if="inStock">In Stock</p>
           <p v-else>Out of Stock</p>
+
+          <ul>
+            <li v-for="(detail, index) in details" :key="index">
+              {{ detail }}
+            </li>
+          </ul>
+
+          <div v-for="variant in variants" :key="variant.id">
+            <p>{{ variant.color }}</p>
+          </div>
         </div>
       </div>
     </div>
