--- a/product-app/index.html
+++ b/product-app/index.html
@@ -10,43 +10,7 @@
   <body>
     <div class="nav-bar"></div>
     <div id="app">
-      <div class="product">
-        <div class="product-image">
-          <img :src="image" />
-        </div>
-        <div class="product-info">
-          <h1>{{ title }}</h1>
-          <p v-if="inStock">In Stock</p>
-          <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
-          <p>{{ sale }}</p>
-
-          <ul>
-            <li v-for="(detail, index) in details" :key="index">
-              {{ detail }}
-            </li>
-          </ul>
-
-          <div
-            v-for="(variant, index) in variants"
-            :key="variant.id"
-            class="color-box"
-            :style="{ 'background-color': variant.color }"
-            @mouseover="updateProduct(index)"
-          ></div>
-
-          <button
-            @click="addToCart"
-            :disabled="!inStock"
-            :class="{ disabledButton: !inStock }"
-          >
-            Add to Cart
-          </button>
-          <button @click="removeFromCart">Remove item</button>
-          <div class="cart">
-            <p>Cart({{cart}})</p>
-          </div>
-        </div>
-      </div>
+      <product :premium="premium"></product>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="main.js"></script>
