Project with vue bindings, events, data

--- a/product-app-v3/index.html
+++ b/product-app-v3/index.html
@@ -10,10 +10,56 @@
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <div class="nav-bar"></div>
+
+      <div class="cart">Cart({{ cart }})</div>
+
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <img :src="image" :class="{ 'out-of-stock-img': !inStock }" />
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+            <p v-if="inStock">In Stock</p>
+            <p v-else>Out of Stock</p>
+            <ul>
+              <li v-for="(detail, index) in details" :key="index">
+                {{ detail }}
+              </li>
+            </ul>
+            <div
+              v-for="variant in variants"
+              :key="variant.id"
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{ 'background-color': variant.color }"
+            ></div>
+            <button
+              class="button"
+              @click="addToCart"
+              :disabled="!inStock"
+              :class="{ disabledButton: !inStock }"
+            >
+              Add to Cart
+            </button>
+            <button
+              class="button"
+              @click="removeFromCart"
+              :disabled="!inStock"
+              :class="{ disabledButton: !inStock }"
+            >
+              Remove
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
+    <script>
+      const mountedApp = app.mount("#app");
+    </script>
   </body>
 </html>
