--- a/product-app-v3/index.html
+++ b/product-app-v3/index.html
@@ -20,7 +20,7 @@
             <img :src="image" :class="{ 'out-of-stock-img': !inStock }" />
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
+            <h1>{{ title }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
@@ -29,9 +29,9 @@
               </li>
             </ul>
             <div
-              v-for="variant in variants"
+              v-for="(variant, index) in variants"
               :key="variant.id"
-              @mouseover="updateImage(variant.image)"
+              @mouseover="updateVariant(index)"
               class="color-circle"
               :style="{ 'background-color': variant.color }"
             ></div>
