--- a/vue-fundamentals/index.html
+++ b/vue-fundamentals/index.html
@@ -24,16 +24,18 @@
           placeholder="Add new item"
           @keyup.enter="addItem"
         />
-        <button
-          type="submit"
-          class="btn btn-primary"
-          :disabled="!newItem.length"
-        >
+        <button type="submit" class="btn btn-primary" :disabled="!newItem">
           Save Item
         </button>
       </form>
       <ul v-if="items.length">
-        <li v-for="item in items">{{item}}</li>
+        <li
+          v-for="item in items"
+          :class="{ 'strikeout': item.purchased, 'priority': item.highPriority }"
+          @click="togglePurchased(item)"
+        >
+          {{item.label}}
+        </li>
       </ul>
       <p v-else>Nice job! You've bought all your items!</p>
     </div>
@@ -44,19 +46,29 @@
       data() {
         return {
           header: "Shopping List App",
-          items: ["10 party hats", "2 board games", "20 cups"],
+          items: [
+            { label: "10 party hats", purchased: false, highPriority: false },
+            { label: "2 board games", purchased: true, highPriority: false },
+            { label: "20 cups", purchased: false, highPriority: true },
+          ],
           newItem: "",
           editing: false,
         };
       },
       methods: {
         addItem() {
-          this.items.push(this.newItem);
+          this.items.push({
+            label: this.newItem,
+            purchased: false,
+          });
           this.newItem = "";
         },
         isEditing(flag) {
           this.editing = flag;
           this.newItem = "";
+        },
+        togglePurchased(item) {
+          item.purchased = !item.purchased;
         },
       },
     }).mount("#shopping-list");
